fix: css issue : title overlapping, issue with odd no. of boxes fixed

--- a/src/style.css
+++ b/src/style.css
@@ -79,12 +79,17 @@ button:hover {
   padding: 1.25rem;
 }
 
+/* The common styles for options-container */
 .options-container {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: center;
   overflow-x: auto;
   padding-bottom: 0.625rem;
+}
+
+/* The class to center the container */
+.options-center {
+  justify-content: center;
 }
 
 .cards {
@@ -101,16 +106,16 @@ button:hover {
   margin: 0.625rem;
   overflow: hidden;
   position: relative;
-  min-width: 12.5rem;
+  min-width: 18.5rem;
   /* Added minimum width for better mobile view */
   background-color: #eef3f4;
   /* Add your desired background color here */
-}     
+}
 
 .cards img {
   max-width: 6.25rem;
   margin-bottom: 0.625rem;
-} 
+}
 
 .cards h2 {
   margin-bottom: 0.625rem;
